# artificial-intelligence-and-knowledge-engineering

./: .editorconfig  .gitignore  .scalafix.conf  .scalafmt.conf  build.sbt
.github/workflows/: ci.yml  ready.yml
lab-01/: build.sbt  merge.py
lab-01/src/main/scala/: Main.scala
lab-01/src/main/scala/algorithms/: AStar.scala  AStarImpl.scala  AStarImplementation.scala  AStarOptimizedImpl.scala  Dijkstra.scala  DijkstraImpl.scala  DijkstraImplementation.scala  Heuristics.scala  Optimization.scala  PathFindingAlgorithm.scala  TabuSearchImpl.scala  TabuSearchKnox.scala
lab-01/src/main/scala/cli/: CliMain.scala  CliMessages.scala  CliOpts.scala  Messages.scala
lab-01/src/main/scala/domain/: BusConnectionSample.scala  Connection.scala  Distance.scala  Graph.scala  Stop.scala  Time.scala
lab-01/src/main/scala/preprocessing/: CsvToGraph.scala
lab-01/src/main/scala/utils/: CostFunctions.scala  NoPathFoundException.scala  Optimization.scala  PathFindingAlgorithm.scala  Reconstruct.scala
lab-01/src/test/scala/algorithms/: AStarImplSpec.scala  DijkstraImplSpec.scala  TabuSearchImplSpec.scala  TabuSearchKnoxSpec.scala  TabuSearchKnoxTest.scala
lab-01/src/test/scala/example/: ExampleSuite.scala
lab-02/: build.sbt
lab-02/src/main/scala/clobber/: Config.scala  GameLoop.scala  Main.scala  (+1 more)
lab-03/1-parcel-transport/: domain.pddl  problem.pddl
lab-03/2-cleaning-robot/: domain.pddl  problem.pddl
lab-03/3-ball-moving-robot/: domain.pddl  problem.pddl
lab-04/: build.sbt  results.txt
lab-05/: main.ipynb  pyproject.toml  tools.py
src/main/scala/clobber/: Main.scala
(+20 files in other folders)
